Saved changes with Create Block Theme plugin

--- a/parts/general-footer.html
+++ b/parts/general-footer.html
@@ -4,7 +4,7 @@
 <p>EMBER: Sheepfolds</p>
 <!-- /wp:paragraph -->
 
-<!-- wp:search {"label":"Search","buttonText":"Search"} /--></div>
+<!-- wp:search {"label":"Search","placeholder":"Search Ember...","buttonText":"Search"} /--></div>
 <!-- /wp:group -->
 
 <!-- wp:group {"align":"wide","layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"space-between"}} -->
